add Android APP利用ConstraintLayout約束版面來設計一個畫面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="finish">完成</string>
+    <string name="enter_weight">Please enter your weight number</string>
 </resources>
